src/objects/Zonda_User_Group__c.object
<CustomObject>
    <description>MG_Zonda User Group: This object links with m_customer_master</description>
    <fields>
        <fullName>Coverage_String__c</fullName>
        <description>All coverage strings from related contracts combined</description>
        <label>Coverage String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Logo_URL__c</fullName>
        <label>Customer Logo URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RSD_Email_Display__c</fullName>
        <formula>RSD_Email__c</formula>
        <inlineHelpText>Pulled from the Zonda Contract(s)</inlineHelpText>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <description>Pulled from the Zonda Contract(s)</description>
        <label>RSD Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_s__c</fullName>
        <description>Pulled from the Zonda Contract(s)</description>
        <label>Role(s)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_s_display__c</fullName>
        <formula>Role_s__c</formula>
        <inlineHelpText>Pulled from the Zonda Contract(s)</inlineHelpText>
        <label>Role(s)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zonda_Customer_Name__c</fullName>
        <inlineHelpText>This is the Customer name that will be displayed in Zonda.  If this is left blank then the User Group Name will be used</inlineHelpText>
        <label>Zonda Customer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro_Display__c</fullName>
        <formula>Zonda_Pro__c</formula>
        <inlineHelpText>Pulled from the Zonda Contract(s)</inlineHelpText>
        <label>Zonda Pro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zonda_Pro__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pulled from the Zonda Contract(s)</description>
        <label>Zonda Pro</label>
        <type>Checkbox</type>
    </fields>
    <label>Zonda User Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zonda User Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zonda User Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zonda_User_Group_Name_Less_Than_50</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 50</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Zonda User Group Name should not exceed 50 characters</errorMessage>
    </validationRules>
</CustomObject>